tests/parser/bad/exps/type_t-map-cid-lparen-cid-map-with.scilexp
let a : Map Uint128 (Option Map uint128 Uint128) = Emp Uint128 (Option Map uint128 Uint128) in True
